@@ -27,6 +27,9 @@ has minimum_perl => (
 
 my $template = <<'BUILD_PL';
 # This Build.PL for {{ $dist_name }} was generated by {{ $plugin_title }}.
+use strict;
+use warnings;
+
 use {{ $minimum_perl }};
 use Module::Build::Tiny {{ $version }};
 Build_PL();
