@@ -26,6 +26,9 @@ $tzil->build;
 my $VERSION = Dist::Zilla::Plugin::ModuleBuildTiny->VERSION || '<self>';
 my $expected = <<"END";
 # This Build.PL for DZT-Sample was generated by Dist::Zilla::Plugin::ModuleBuildTiny $VERSION.
+use strict;
+use warnings;
+
 use 5.008;
 use Module::Build::Tiny 0.030;
 Build_PL();
